--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -3,7 +3,6 @@ apply plugin: 'com.android.application'
 android {
 
     compileSdkVersion 27
-    buildToolsVersion "27.0.3"
 
     defaultConfig {
         applicationId "com.jaeger.statusbardemo"
@@ -21,12 +20,12 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:27.1.0'
-    compile 'com.android.support:design:27.1.0'
-    compile 'com.ashokvarma.android:bottom-navigation-bar:1.3.0'
-    compile 'com.r0adkll:slidableactivity:2.0.5'
-    compile project(path: ':library')
-    //    compile 'com.jaeger.statusbaruitl:library:1.3.2'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation 'com.android.support:design:27.1.0'
+    implementation 'com.ashokvarma.android:bottom-navigation-bar:1.3.0'
+    implementation 'com.r0adkll:slidableactivity:2.0.5'
+    implementation project(path: ':library')
+    //    implementation 'com.jaeger.statusbaruitl:library:1.3.2'
 }
