--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 ext {
     sdk = 29
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+}
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
     repositories {
