--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,5 @@
 #Sun Feb 14 13:26:50 CST 2016
 #systemProp.http.proxyHost=127.0.0.1
 #systemProp.http.proxyPort=1080
+android.enableJetifier=true
+android.useAndroidX=true
