--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
 
@@ -22,10 +24,15 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.13-beta-3'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "androidx.core:core-ktx:1.0.2"
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.ashokvarma.android:bottom-navigation-bar:1.3.0'
     implementation 'com.r0adkll:slidableactivity:2.0.6'
     implementation project(path: ':library')
     //    implementation 'com.jaeger.statusbaruitl:library:1.3.2'
+}
+repositories {
+    mavenCentral()
 }
